small fixes around of alignment etx

--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -27,7 +27,7 @@ h2.post-title {
 }
 h3.post-subtitle {
     font-style: italic;
-    text-align: center;
+      text-align: center;
 }
 .main_picture {
   width: 90%;
@@ -59,6 +59,8 @@ img.gallery_image.horizontal {
 .post_gallery {
   display: flex;
   align-items: center;
+  justify-content: center;
+  margin-bottom: 2rem;
 }
 .documentation {
   text-align: center;
